--- a/tests/index.html
+++ b/tests/index.html
@@ -6,6 +6,6 @@
         <script src="dist/bundle.js"></script>
     </head>
     <body>
-        <div id="root"></div>
+        <div id="app"></div>
     </body>
 </html>
